# ivr_code

./: README.md
data/Input/: InFile0.txt  InFile1.txt  InFile2.txt  InFile3.txt  InFile4.txt  InFileMaker.py  InputFormat.txt
data/Output/: OutFileMaker.py
release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  LW_code_clean_version  Makefile  cmake_install.cmake
src/: AuxiliaryFunction.cpp  CMakeLists.txt  Detector.cpp  FullSystem.cpp  Main.cpp  System.cpp  System.h  util.h
src/MPICode/: CommunicationFunctionMPI.cpp  ComputeDetectorEnergyWindowMPI.cpp  ConstructDetectorMPI.cpp  DetectorEvolveMPI.cpp  ReadMPI.cpp  SystemReadMPI.cpp
trash/: Code Structure.bak  InputFormat.docx  Read Me.docx  input_format.bak
trash/Debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  LW_code_clean_version  Makefile  cmake_install.cmake
trash/Result/: IPR_all_state.txt  detector_state_density  input.txt  log.txt  output.txt  sampling_state_info.txt
